[project]
name = "mcp-webarchive"
version = "0.1.0"
description = "MCP server for Internet Archive Wayback Machine access"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=2.13",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "html2text>=2024.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
py-modules = ["server", "rate_limiter"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
